# USDA-Auburn-Su25

./: .gitattributes  .gitignore  README.md  pyproject.toml  rf_optuna.txt
Clinic Archive/executables/: expl.txt
Clinic Archive/otherdocs/: teamnotebook.docx
Data/: Backus BGSS 2017 HPR data - for Mudd CS 2nd.csv
Data Cleaning/: ErrorSummary.py  aphid_cleaner.py  tarsalis_cleaner.py
Data/Sharpshooter Data - HPR 2017/: BGSS expt4_061917_rep1.WDQ  BGSS expt4_071217_rep15.WDQ  BGSS expt4_071317_rep16.WDQ  BGSS expt4_071817_rep20.WDQ  Backus BGSS 2017 HPR data - for Mudd CS.csv  add_dummy_RVC.py  csv_to_parquet.py  parsed_splitter.py  parser.py  temp.py  txt_parser.py
Exploration/Ashley/: LiveDataWindow.py  process_old_scido_data.py
Exploration/Cole/: Cole_DataWindow.py  Cole_EPGData.py  anotherslider.py  checker.py  coles_data_maker.py  do not use - slidertests copy.py  slidertests.py  testdata1.csv  very curious.csv
Exploration/Devanshi/: plot.py
Exploration/Jonathan/: button_test.py  engrs_socket.py  generate_data.py  pyqt-exploration.py  z-test.py  (+2 more)
GUI/: .DataWindow2.py  .gitattributes  AddLabelManager.py  AppLauncherDialog.py  CommentMarker.py  ConnectionIndicator.py  DataWindow.py  DataWindow2.py  EPGData.py  EPGSocket.py  FileSelector.py  HoverableSvgItem.py  LabelArea.py  LabelTab.py  Labeler.py  LiveDataWindow.py  LiveViewTab.py  LoadingScreen.py  MainWindow.py  ModelSelector.py  ModelSelector_old.py  NewRecordingDialog.py  NewSettingsWindow.py  PanZoomViewBox.py  SelectionManager.py  Settings.py  SettingsWindow.py  SettingsWindow_old.py  SliderPanel.py  SliderPanel2.py  SocketClient.py  SocketServer.py  TextEdit.py  UploadFileDialog.py  bulid.py  main.py  main2.py  main_old.py  settings_test.py  startup_loader.py  (+5 more)
GUI copy/: NewRecordingDialog.py  build.py  requirements.txt  test_settings.py
ML/: RF_optuna.txt  UNet_optuna.txt  data_format.csv  data_loader.py  hyperparameter_plot.py  kfold-cross-validator.py  kfold_cross_validator.py  label_map.json  model_eval.py  model_evaluation.py  model_evaluation_unet_probe.py  probe_filter.py  probesplitter_unet.py  rf.py  sharpshooter_rf.py  sharpshooter_rf2.py  stat.py  summary_csv_to_md.py  transform_worker.py  unet.py  unet_sharpshooter.py  unet_weights
Socket/: DataSocket.py
(+599 files in other folders)
