[project]
name = "summer-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "positional-encodings>=6.0.3",
    "pyarrow>=20.0.0",
    "pyqt6>=6.9.0",
    "pyqt6-charts>=6.9.0",
    "pyqtgraph>=0.13.7",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
]
