[project]
name = "summer-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.0",
    "matplotlib>=3.10.3",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "positional-encodings>=6.0.3",
    "psutil>=7.0.0",
    "pyarrow>=20.0.0",
    "pyinstaller>=6.14.1",
    "pyqt6>=6.9.0",
    "pyqt6-charts>=6.9.0",
    "pyqtgraph>=0.13.7",
    "scikit-learn>=1.5.2",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "snakeviz>=2.2.2",
    "tabulate>=0.9.0",
    "torch",
    "torchaudio",
    "torchvision",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu128/torch-2.7.1%2Bcu128-cp311-cp311-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu128/torchaudio-2.7.1%2Bcu128-cp311-cp311-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu128/torchvision-0.22.1%2Bcu128-cp311-cp311-win_amd64.whl" }
